--- a/receitas/templates/partials/menu.html
+++ b/receitas/templates/partials/menu.html
@@ -14,32 +14,16 @@
                             <a class="nav-brand" href="{% url 'index' %}">
                                 <img src="{% static 'img/core-img/logo.png' %}" alt="Logo Delícia Mania" width="250">
                             </a>
-
-                            <!-- Navbar Toggler -->
-                            <div class="classy-navbar-toggler">
-                                <span class="navbarToggler"></span>
-                            </div>
-
-                            <!-- Menu -->
-                            <div class="classy-menu text-right">
-                                <!-- Close Button -->
-                                <div class="classycloseIcon">
-                                    <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-                                </div>
-
+                            <div class="classy-menu">
                                 <!-- Navigation -->
                                 <div class="classynav">
-                                    <ul>
-                                        <li><a href="{% url 'index' %}">Home</a></li>
+                                    <ul class="menu-items">
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">Perfil</a></li>
                                     </ul>
-
-                                    <!-- Search Button -->
-                                    <div class="search-btn">
-                                        <i class="fa fa-search" aria-hidden="true"></i>
-                                    </div>
                                 </div>
                             </div>
-                        </nav>
+                        </nav>                        
                     </div>
                 </div>
             </div>
