--- a/receitas/templates/index.html
+++ b/receitas/templates/index.html
@@ -1,41 +1,40 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-    <!-- Search Wrapper -->
-    <div class="search-wrapper">
-        <div class="close-btn"><i class="fa fa-times" aria-hidden="true"></i></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <form action="#" method="post">
-                        <input type="search" name="search" placeholder="O que está procurando...">
-                        <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                    </form>
-                </div>
-            </div>
+    <!-- Banner -->
+    <div class="banner-area">
+        <div class="receipe-slider">
+            <img src="{% static 'img/bg-img/tomate_banner.jpg' %}" alt="Banner de receita">
         </div>
     </div>
-    
+
+    <!-- Search Wrapper -->
+    <div class="search-container">
+        <form action="#" method="post" class="search-wrapper">
+            <input type="search" name="search" placeholder="O que está procurando...">
+            <button type="submit"><i class="fa fa-search" aria-hidden="true"></i>Buscar</button>
+        </form>
+    </div>
+
+    <!-- Cards das receitas -->
     <section class="best-receipe-area">
-        <div class="container">
-            <div class="row">
-                {% if receitas %}
-                    {% for receita in receitas %}
-                    <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="single-best-receipe-area mb-30">
-                            <img src="{% static 'img/bg-img/foto_receita.png' %}" alt="Imagem da receita">
-                            <div class="receipe-content">
-                                <a href="{% url 'receita' receita.id %}">
-                                    <h5>{{ receita.nome_receita }}</h5>
-                                </a>
-                            </div>
+        <div class="recipe-cards-container">
+            {% if receitas %}
+                {% for receita in receitas %}
+                <div class="recipe-card">
+                    <div class="single-best-receipe-area">
+                        <img src="{% static 'img/bg-img/foto_receita.png' %}" alt="Imagem da receita">
+                        <div class="receipe-content">
+                            <a href="{% url 'receita' receita.id %}">
+                                <h5>{{ receita.nome_receita }}</h5>
+                            </a>
                         </div>
                     </div>
-                    {% endfor %}
-                {% else %}
-                    <p>Nenhuma receita encontrada.</p>
-                {% endif %}
-            </div>
+                </div>
+                {% endfor %}
+            {% else %}
+                <p>Nenhuma receita encontrada.</p>
+            {% endif %}
         </div>
     </section>
 {% endblock content %}
