--- a/receitas/templates/partials/footer.html
+++ b/receitas/templates/partials/footer.html
@@ -1,42 +1,41 @@
 {% load static %}
 
 <footer class="footer-area">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center justify-content-between">
-            <!-- Footer Social Info -->
-            <div class="footer-social-info text-right">
-                <a href="#" aria-label="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#" aria-label="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            </div>
-
-            <!-- Footer Logo -->
+    <div class="container">
+        <div class="footer-container">
+            <!-- Logo do footer -->
             <div class="footer-logo">
                 <a href="{% url 'index' %}">
                     <img src="{% static 'img/core-img/logo.png' %}" alt="Logo Delícia Mania" width="250">
                 </a>
             </div>
-        </div>
 
-        <!-- Footer Links -->
-        <div class="row justify-content-between">
-            <div class="col-md-4 footer-column">
+            <!-- Colunas do footer -->
+            <div class="footer-column">
                 <h5>Sobre Nós</h5>
-                <p>Oferecemos as melhores receitas para satisfazer seu paladar. Buscamos qualidade e excelência!Oferecemos as melhores receitas para satisfazer seu paladar. Buscamos qualidade e excelência!Oferecemos as melhores receitas para satisfazer seu paladar. Buscamos qualidade e excelência!Oferecemos as melhores receitas para satisfazer seu paladar. Buscamos qualidade e excelência!</p>
+                <p>Oferecemos as melhores receitas para satisfazer seu paladar. Buscamos qualidade e excelência!</p>
             </div>
-            <div class="col-md-4 footer-column">
+
+            <div class="footer-column">
                 <h5>Dúvidas Gerais</h5>
                 <ul>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Contato</a></li>
                     <li><a href="#">Política de Privacidade</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 footer-column">
-                <h5>Contato</h5>
-                <p>Email: contato@deliciamania.com</p>
-                <p>Telefone: (11) 1234-5678</p>
-             
+
+            <div class="footer-column footer-social-info">
+                <h5>Redes Sociais</h5>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
 
