--- a/receitas/templates/receita.html
+++ b/receitas/templates/receita.html
@@ -1,56 +1,33 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-    <!-- Search Wrapper -->
-    <div class="search-wrapper">
-        <div class="close-btn"><i class="fa fa-times" aria-hidden="true"></i></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <form action="#" method="post">
-                        <input type="search" name="search" placeholder="O que está procurando...">
-                        <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    
     <div class="receipe-post-area section-padding-80">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="receipe-slider owl-carousel">
-                        <img src="{% static 'img/bg-img/tomate_banner.jpg' %}" alt="Banner de receita">
-                    </div>
-                </div>
-            </div>
-        </div>
-        
         <div class="receipe-content-area">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-8">
-                        <div class="receipe-headline my-5">
-                            <span>{{ receita.data_receita }}</span>
-                            <h2>{{ receita.nome_receita }}</h2>
-                            <div class="receipe-duration">
-                                <h6>Preparo: {{ receita.tempo_preparo }}</h6>
-                                <h6>Rendimento: {{ receita.rendimento }}</h6>
-                                <h6>Categoria: {{ receita.categoria }}</h6>
-                            </div>
-                        </div>
+                <!-- Layout com foto à esquerda e informações à direita -->
+                <div class="receipe-details">
+                    <!-- Coluna da imagem -->
+                    <div class="image-column">
+                        <img src="{% static 'img/bg-img/foto_receita.png' %}" alt="Imagem da receita">
                     </div>
-                </div>
+                    
+                    <!-- Coluna das informações -->
+                    <div class="info-column">
+                        <div class="receipe-headline my-5">
+                            <span>{{ receita.data_receita }}</span> 
+                            <h2>{{ receita.nome_receita }}</h2>
+                        </div>
 
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <div class="single-preparation-step d-flex">
+                        <div class="receipe-duration">
+                            <h6>Preparo: {{ receita.tempo_preparo }} minutos</h6>
+                            <h6>Rendimento: {{ receita.rendimento }} porções</h6>
+                            <h6>Categoria: {{ receita.categoria }}</h6>
+                        </div>
+
+                        <div class="single-preparation-step">
                             <p>{{ receita.modo_preparo }}</p>
                         </div>
-                    </div>
 
-                    <div class="col-12 col-lg-4">
                         <div class="ingredients">
                             <h4>Ingredientes</h4>
                             <p>{{ receita.ingredientes }}</p>
