--- a/receitas/templates/partials/footer.html
+++ b/receitas/templates/partials/footer.html
@@ -2,40 +2,28 @@
 
 <footer class="footer-area">
     <div class="container">
-        <div class="footer-container">
-            <!-- Logo do footer -->
-            <div class="footer-logo">
-                <a href="{% url 'index' %}">
-                    <img src="{% static 'img/core-img/logo.png' %}" alt="Logo Delícia Mania" width="250">
-                </a>
-            </div>
-
-            <!-- Colunas do footer -->
+        <div class="footer-links">
             <div class="footer-column">
                 <h5>Sobre Nós</h5>
                 <p>Oferecemos as melhores receitas para satisfazer seu paladar. Buscamos qualidade e excelência!</p>
             </div>
-
             <div class="footer-column">
                 <h5>Dúvidas Gerais</h5>
-                <ul>
+                <ul style="list-style: none; padding-left: 0;">
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Contato</a></li>
                     <li><a href="#">Política de Privacidade</a></li>
                 </ul>
             </div>
-
-            <div class="footer-column footer-social-info">
+            <div class="footer-column">
                 <h5>Redes Sociais</h5>
-                <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Twitter</a></li>
-                </ul>
+                <div class="footer-social-info">
+                    <a href="#" target="_blank">Facebook</a>
+                    <a href="#" target="_blank">Instagram</a>
+                    <a href="#" target="_blank">Twitter</a>
+                </div>
             </div>
         </div>
     </div>
 </footer>
-
-
