--- a/receitas/templates/partials/footer.html
+++ b/receitas/templates/partials/footer.html
@@ -19,9 +19,9 @@
             <div class="footer-column">
                 <h5>Redes Sociais</h5>
                 <div class="footer-social-info">
-                    <a href="#" target="_blank">Facebook</a>
-                    <a href="#" target="_blank">Instagram</a>
-                    <a href="#" target="_blank">Twitter</a>
+                    <a href="https://www.facebook.com/?locale=pt_BR" target="_blank">Facebook</a>
+                    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                    <a href="https://x.com/?lang=pt" target="_blank">Twitter</a>
                 </div>
             </div>
         </div>
