--- a/receitas/templates/partials/menu.html
+++ b/receitas/templates/partials/menu.html
@@ -18,8 +18,8 @@
                                 <!-- Navigation -->
                                 <div class="classynav">
                                     <ul class="menu-items">
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#">Perfil</a></li>
+                                        <li><a href="{% url 'perfil' %}">Perfil</a></li>
+                                        <li><a href="{% url 'login' %}">Login</a></li>
                                     </ul>
                                 </div>
                             </div>
