--- a/receitas/templates/buscar.html
+++ b/receitas/templates/buscar.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<h2>Resultados para "{{ query }}"</h2>
+<h2 class="result-search">Resultados para "{{ query }}"</h2>
 
 <section class="best-receipe-area">
     <div class="recipe-cards-container">
