--- a/receitas/templates/partials/footer.html
+++ b/receitas/templates/partials/footer.html
@@ -10,7 +10,7 @@
             <div class="footer-column">
                 <h5>Dúvidas Gerais</h5>
                 <ul style="list-style: none; padding-left: 0;">
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="https://www.letras.mus.br/pineapple/sobre-nos-poesia-acustica-2/" target="_blank">Sobre</a></li>
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Contato</a></li>
                     <li><a href="#">Política de Privacidade</a></li>
