--- a/receitas/templates/partials/menu.html
+++ b/receitas/templates/partials/menu.html
@@ -18,8 +18,8 @@
                                 <!-- Navigation -->
                                 <div class="classynav">
                                     <ul class="menu-items">
-                                        <li><a href="{% url 'perfil' %}">Perfil</a></li>
-                                        <li><a href="{% url 'login' %}">Login</a></li>
+                                        <li><a href="{% url 'perfil' %}">PERFIL</a></li>
+                                        <li><a href="{% url 'login' %}?next={{ request.path }}">LOGIN</a></li>
                                     </ul>
                                 </div>
                             </div>
