--- a/deliciasmania/static/site.css
+++ b/deliciasmania/static/site.css
@@ -58,7 +58,7 @@ body {
 }
 
 .nav-brand img {
-    height: 200px; /* Define a altura da imagem do logo para 50px */
+    height: 100%; /* Define a altura da imagem do logo para 50px */
     padding-top: 10px; /* Adiciona padding de 10px na parte superior da imagem */
 }
 
@@ -68,13 +68,6 @@ body {
     justify-content: space-between; /* Distribui os itens uniformemente entre as extremidades */
     align-items: center; /* Alinha os itens verticalmente no centro */
     width: 100%; /* Faz com que a navbar ocupe toda a largura disponível */
-}
-
-.classynav {
-    display: flex; /* Exibe os itens de navegação na horizontal */
-    justify-content: space-between; /* Distribui os itens igualmente entre as extremidades */
-    width: 100%; /* A largura total da navbar */
-    font-style: oblique;
 }
 
 .classynav ul.menu-items {
@@ -266,7 +259,7 @@ body {
     border-radius: 10px;
 }
 
-/* Fixando o nome na parte inferior do card */
+/* nome na parte inferior do card */
 .receipe-content {
     position: absolute; /* Permite fixar o conteúdo na parte inferior */
     bottom: 10px; /* Coloca o nome 10px acima da borda inferior */
@@ -287,10 +280,11 @@ body {
 }
 
 .result-search{
-    font-size: 25px;
-    font-style: italic;
-    margin-left: 10px;
+    font-size: 25px; /* Define um tamanho grande para a fonte */
+    font-style: italic; /* Aplica estilo itálico ao texto */
+    margin-left: 10px; /* Adiciona um espaçamento à esquerda */
 }
+
 
 /* Melhorando a interação visual das receitas */
 .recipe-card:hover {
@@ -313,26 +307,215 @@ body {
 
 /* Coluna da imagem */
 .image-column {
-    flex: 1; /* A imagem ocupa metade da largura disponível */
+    flex: 1; /* A imagem ocupa a metade da largura disponível */
     min-width: 300px; /* Tamanho mínimo para a coluna da imagem */
+    display: flex; /* Usado para centralizar a imagem se necessário */
+    justify-content: center; /* Centraliza a imagem horizontalmente */
+    align-items: center; /* Centraliza a imagem verticalmente */
 }
 
 .image-column img {
-    margin-top: 30px;
-    width: 100%; /* Faz com que a imagem ocupe toda a largura da coluna */
+    width: 100%; /* A imagem ocupa toda a largura da coluna */
     height: auto; /* Mantém a proporção da imagem */
-    border-radius: 10px; /* Adiciona bordas arredondadas na imagem */
+    border-radius: 10px; /* Borda arredondada na imagem */
+    object-fit: cover; /* Garante que a imagem cubra completamente a área da coluna */
+    max-width: 100%; /* Previne que a imagem ultrapasse a largura máxima da coluna */
 }
 
 /* Coluna das informações (dentro de um card) */
 .info-column {
-    flex: 1.5; /* A coluna de informações ocupa a outra metade da largura disponível */
+    flex: 1; /* A coluna de informações ocupa 1.5x a largura da coluna da imagem */
     background-color: #fff; /* Cor de fundo branca para o card */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave ao redor do card */
-    border-radius: 10px; /* Bordas arredondadas no card */
-    padding: 20px; /* Adiciona espaço interno ao card */
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1); /* Sombra suave e mais difusa ao redor do card */
+    border-radius: 12px; /* Bordas arredondadas mais suaves no card */
+    padding: 20px; /* Mais espaço interno no card para uma melhor legibilidade */
     box-sizing: border-box; /* Inclui o padding no cálculo do tamanho */
+    display: flex; /* Flexbox para organização interna */
+    flex-direction: column; /* Organiza os itens da coluna em formato de coluna */
+    justify-content: space-between; /* Garante que os elementos fiquem distribuídos de forma eficiente */
+    margin-bottom: 10px;
 }
+
+/* Adiciona um pouco de espaçamento entre as seções dentro do card */
+.info-column > * {
+    margin-bottom: 10px; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Estilos para a página de card de receita */
+.recipe-card-page-receita {
+    margin-top: 70px;
+    padding: 20px;
+    padding-inline: 50px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+}
+
+.recipe-card-page-receita h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+/* Estilos para a linha de cards de receita */
+.recipe-card-row-receita {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+/* Estilos para cada card de receita */
+.recipe-card-column-receita {
+    flex: 1 1 calc(33.333% - 20px);
+    max-width: calc(33.333% - 20px);
+    box-sizing: border-box;
+}
+
+/* Estilo do card de receita */
+.recipe-card-receita {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+    height: 350px; /* Altura fixa para os cards */
+    display: flex;
+    flex-direction: column; /* Flexbox para controlar o layout do card */
+}
+
+/* Link que envolve o card inteiro */
+.recipe-card-receita a {
+    display: block;
+    text-decoration: none;
+    height: 100%; /* Faz com que o link cubra todo o card */
+}
+
+/* Estilo do contêiner da imagem */
+.recipe-card-image-container-receita {
+    position: relative;
+    width: 100%;
+    height: 60%; /* A imagem ocupa 60% da altura do card */
+    overflow: hidden;
+}
+
+/* Estilo da imagem, com object-fit para cobrir todo o card */
+.recipe-card-image-receita {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Garante que a imagem cubra completamente a área do card */
+}
+
+/* Estilo para as informações sobre a imagem */
+.recipe-card-info-receita {
+    position: absolute; /* Posiciona as informações sobre a imagem */
+    bottom: 0; /* Coloca as informações no fundo da imagem */
+    left: 0;
+    right: 0;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro com transparência */
+    color: #fff;
+    border-radius: 8px 8px 0 0; /* Arredonda o topo das informações */
+    text-align: center;
+}
+
+/* Nome da receita */
+.recipe-card-info-receita h4 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+/* Informações adicionais */
+.recipe-card-info-receita p {
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+
+/* Efeito hover no card */
+.recipe-card-receita:hover {
+    transform: translateY(-10px); /* Move o card para cima quando o mouse passa sobre ele */
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1); /* Aumenta a sombra ao passar o mouse */
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .recipe-card-column-receita {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -370,16 +553,6 @@ body {
     align-items: center;
     
 }
-
-
-
-
-
-
-
-
-
-
 
 #login-container {
     max-width: 400px;
@@ -448,50 +621,6 @@ body {
     font-weight: 500;
 }
 
-#login-container a {
-    display: inline-block;
-    margin-top: 20px;
-    color: #007bff;
-    font-size: 14px;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-#login-container a:hover {
-    color: #0056b3;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .perfil-foto {
     width: 250px;
@@ -529,42 +658,66 @@ body {
 }
 
 .perfil-logout {
-    display: block;
-    width: 20%;
-    text-align: center;
-    padding: 10px;
+    display: inline-block;
+    width: auto;
+    padding: 15px 60px;
     font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
     background-color: #f88;
     color: white;
     text-decoration: none;
-    border-radius: 5px;
-    margin-inline: 55%;
+    border-radius: 70px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    margin-top: 0px;
+    margin-left: 500px;
 }
 
 .perfil-logout:hover {
-    background-color: #f88;
+    background-color: #e77a7a;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
 }
 
+.perfil-logout:active {
+    background-color: #e55;
+    transform: translateY(2px);
+}
 /* RESPONSIVIDADE - Telas pequenas */
 @media (max-width: 768px) {
-    .classynav ul {
-        flex-direction: column; /* Organiza os itens do menu em coluna */
-        align-items: center; /* Centraliza os itens */
-        gap: 10px; /* Adiciona 10px de espaçamento entre os itens */
+    .classy-navbar {
+        flex-direction: row; /* Alinha os itens horizontalmente */
+        justify-content: space-between; /* Garante que os itens fiquem espaçados igualmente */
     }
 
     .classynav ul.menu-items {
-        flex-direction: column; /* Alinha os itens em coluna em vez de linha */
-        width: 100%; /* Faz a lista ocupar toda a largura disponível */
-        text-align: center; /* Centraliza o texto dos itens de menu */
+        display: flex; /* Mantém a navegação em linha */
+        flex: 1; /* A navegação ocupa 100% da largura */
+        justify-content: flex-end; /* Alinha os itens da navegação para a direita */
     }
 
-    .classynav ul.menu-items li {
-        margin: 10px 0; /* Adiciona um espaçamento vertical entre os itens de menu */
+    /* Alinhamento do perfil e login */
+    .classy-navbar .profile-login {
+        display: flex; /* Flexbox para alinhar os itens lado a lado */
+        align-items: center; /* Alinha os itens verticalmente no centro */
+        justify-content: flex-end; /* Garante que o perfil e o login fiquem à direita */
+    }
+
+    .classynav ul.menu-items li,
+    .classy-navbar .profile-login li {
+        margin: 0 10px; /* Reduz a margem entre os itens para otimizar o espaço */
+    }
+
+    .classynav ul.menu-items li a,
+    .classy-navbar .profile-login li a {
+        font-size: 16px; /* Ajusta o tamanho da fonte para telas menores */
+        padding: 8px 16px; /* Reduz o padding para economizar espaço */
     }
 
     .nav-brand img {
-        height: 40px; /* Diminui a altura da logo em telas menores */
+        height: 100%; /* Diminui a altura da logo em telas menores */
     }
 
     .recipe-card {
@@ -573,6 +726,23 @@ body {
 
     .search-wrapper {
         width: 80%; /* Define a largura da barra de busca para 80% */
+    }
+
+    .container {
+        flex-direction: column; /* Coloca as colunas em formato de coluna em telas pequenas */
+    }
+
+    .image-column, .info-column {
+        flex: 1 1 100%; /* Cada coluna vai ocupar 100% da largura em telas pequenas */
+    }
+
+    .image-column {
+        order: 1; /* Coloca a imagem em cima */
+    }
+
+    .info-column {
+        order: 2; /* Coloca o card abaixo da imagem */
+        padding: 15px; /* Menos padding para dispositivos menores */
     }
 
     .footer-links {
@@ -603,22 +773,5 @@ body {
 
     .info-column {
         box-shadow: none; /* Remove a sombra do card em telas pequenas */
-    }
-}
-
-/* Telas muito pequenas */
-@media (max-width: 480px) {
-    .recipe-card {
-        width: 100%; /* Faz os cards ocuparem toda a largura disponível */
-    }
-
-    .top-header-area {
-        flex-direction: column; /* Organiza os itens do cabeçalho em coluna */
-        text-align: center; /* Centraliza o texto */
-    }
-
-    .nav-brand {
-        position: static; /* Remove a posição absoluta do logo */
-        transform: none; /* Remove a transformação aplicada ao logo */
     }
 }
